<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
<!--   standard, Temperature in Kelvin and wind speed in meter/sec-->
<!--    metric     Celsius and wind speed in meter/sec,-->
<!--   imperial  For temperature in Fahrenheit and wind speed in miles/hour, use-->
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    tools:context=".ui.setting.Setting">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/fram"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:scaleType="fitXY"
            android:src="@drawable/sky" />

        <TextView
            style="@style/textView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:gravity="center"
            android:text="@string/setting"
            android:textSize="30sp" />
    </FrameLayout>
    <TextView
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/fram"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        android:id="@+id/her"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/her_yoy_can_change_units_of_measurement_as_you_want"/>

    <RadioGroup
        android:paddingStart="10dp"
        android:id="@+id/unitsRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/her">

        <RadioButton
            android:layout_marginBottom="20dp"
            android:id="@+id/standardRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/standard"
            android:textSize="25sp"/>
        <RadioButton
            android:layout_marginBottom="20dp"
            android:id="@+id/metricRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/metric"
            android:textSize="25sp" />
        <RadioButton
            android:layout_marginBottom="20dp"
            android:id="@+id/imperialRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/imperial"
            android:textSize="25sp" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:weightSum="3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@id/unitsRadioGroup"
        app:layout_constraintBottom_toBottomOf="@id/unitsRadioGroup"
        app:layout_constraintStart_toEndOf="@id/unitsRadioGroup">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/textView"
            android:text="@string/celsius_and_wind_speed_in_meter_sec"
            android:textSize="15sp"
            android:gravity="center|start"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/textView"
            android:text="@string/temperature_in_kelvin_and_wind_speed_in_meter_sec"
            android:textSize="15sp"
            android:gravity="center|start"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            style="@style/textView"
            android:text="@string/temperature_in_fahrenheit_and_wind_speed_in_miles_hour"
            android:textSize="15sp"
            android:gravity="center|start"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/linear"
        android:layout_marginHorizontal="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/unitsRadioGroup"
        android:background="@color/broun"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:orientation="horizontal" />
    <TextView
        android:paddingStart="10dp"
        app:layout_constraintTop_toBottomOf="@id/linear"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:gravity="start"
        android:id="@+id/her2"
        android:layout_marginTop="40dp"
        android:fontFamily="sans-serif-condensed"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/her_you_can_chose_language"/>
    <RadioGroup
        android:paddingStart="10dp"
        android:id="@+id/langRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:gravity="start"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/her2">

        <RadioButton
            android:layout_marginBottom="20dp"
            android:id="@+id/EnglishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="55dp"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/english"
            android:textSize="25sp"/>
        <RadioButton
            android:layout_marginBottom="20dp"
            android:id="@+id/ArabicRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:checked="false"
            android:text="@string/arabic"
            android:textSize="25sp" />
    </RadioGroup>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/langRadioGroup"
        android:id="@+id/saveButton"
        android:text="@string/save"
        android:textAllCaps="false"
        android:textSize="18sp"/>

</androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</layout>