<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginVertical="5dp"
        android:layout_marginHorizontal="5dp"
        android:backgroundTint="@color/list_item"
        app:cardCornerRadius="10dp">
        <androidx.constraintlayout.widget.ConstraintLayout
            android:paddingVertical="5dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/currentModeImg"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginHorizontal="40dp"
                android:layout_marginTop="12dp"
                android:contentDescription="@string/current_mode"
                android:src="@drawable/ic_cloud"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintStart_toEndOf="@id/description"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/time_zone"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_c"
                android:textColor="@color/text_color"
                style="@style/textView"
                android:textSize="30sp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                />
            <TextView
                android:id="@+id/currentTemp"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_c"
                android:textColor="@color/move"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/time_zone"
                app:layout_constraintBottom_toBottomOf="@id/currentModeImg"/>
            <TextView
                android:id="@+id/tempUnit"
                android:layout_width="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_height="wrap_content"
                android:text="@string/_c"
                android:textColor="@color/move"
                android:textSize="30sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintStart_toEndOf="@id/currentTemp"
                app:layout_constraintTop_toTopOf="@id/currentTemp"
                app:layout_constraintBottom_toBottomOf="@id/currentTemp"
                />
            <TextView
                android:id="@+id/description"
                android:layout_width="wrap_content"
                android:layout_marginStart="70dp"
                android:layout_height="wrap_content"
                android:text="@string/mostly_clear"
                android:textColor="@color/move"
                android:textSize="20sp"
                android:fontFamily="sans-serif-black"
                app:layout_constraintTop_toTopOf="@id/tempUnit"
                app:layout_constraintBottom_toBottomOf="@id/currentModeImg"                app:layout_constraintStart_toEndOf="@id/currentTemp" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>
</layout>